fixed overflow

--- a/src/scss/newhome.scss
+++ b/src/scss/newhome.scss
@@ -108,8 +108,8 @@ header {
 
 
 .hero {
-    width: 100%;
-    height: 70vh;
+    // width: 100%;
+    // height: 70vh;
     display: flex;
     align-items: center;
     background: url('../assets/good/dark-abstract-background.jpg') no-repeat center center;
